[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/ui/CharacterTalentsControl.gd" type="Script" id=1]
[ext_resource path="res://assets/characters/glaciela/glaciela_idle.png" type="Texture" id=2]
[ext_resource path="res://assets/characters/player/player_idle.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/button_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/button.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/textbox.png" type="Texture" id=6]
[ext_resource path="res://themes/Blur.tres" type="Material" id=7]
[ext_resource path="res://assets/UI/quiticon.png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/characters/agnette/agnette_idle_1.png" type="Texture" id=13]
[ext_resource path="res://scripts/ui/CharactersUI.gd" type="Script" id=14]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 12 )

[node name="CharacterMenuUI" type="CanvasLayer"]
pause_mode = 2
layer = 99

[node name="CharactersUI" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -360.0
margin_right = 540.0
margin_bottom = 360.0
script = ExtResource( 14 )

[node name="Blur" type="ColorRect" parent="CharactersUI"]
visible = false
material = ExtResource( 7 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1284.0
margin_top = -734.0
margin_right = 1956.0
margin_bottom = 1426.0
color = Color( 1, 1, 1, 0 )

[node name="NinePatchRect" type="NinePatchRect" parent="CharactersUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -436.5
margin_top = -307.0
margin_right = 436.5
margin_bottom = 307.0
texture = ExtResource( 6 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="Header" type="RichTextLabel" parent="CharactersUI/NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -306.0
margin_top = 13.0
margin_right = 306.0
margin_bottom = 61.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 1, 0.843137, 0.0117647, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]=== [color=#ffd703]Characters[/color] ==="
text = "=== Characters ==="
scroll_active = false

[node name="CloseButtonMainUI" type="TextureButton" parent="CharactersUI/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -436.0
margin_top = -307.0
margin_right = -396.0
margin_bottom = -267.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 9 )
expand = true

[node name="PlayerSprite" type="Sprite" parent="CharactersUI/NinePatchRect"]
position = Vector2( 180, 181 )
scale = Vector2( 7, 7 )
texture = ExtResource( 3 )

[node name="GlacielaSprite" type="Sprite" parent="CharactersUI/NinePatchRect"]
position = Vector2( 436, 181 )
scale = Vector2( 7, 7 )
texture = ExtResource( 2 )

[node name="AgnetteSprite" type="Sprite" parent="CharactersUI/NinePatchRect"]
position = Vector2( 693, 181 )
scale = Vector2( 7, 7 )
texture = ExtResource( 13 )

[node name="PlayerStatsLabel" type="RichTextLabel" parent="CharactersUI/NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -375.5
margin_top = 269.0
margin_right = -122.5
margin_bottom = 434.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 1, 0.843137, 0.0117647, 1 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center] Max HP: 50 
Attack: 20
[/center]

"
text = " Max HP: 50 
Attack: 20


"
fit_content_height = true
scroll_active = false

[node name="PlayerOpenTalentButton" type="TextureButton" parent="CharactersUI/NinePatchRect"]
anchor_left = 0.215
anchor_right = 0.215
margin_left = -63.195
margin_top = 400.0
margin_right = 66.805
margin_bottom = 465.0
rect_min_size = Vector2( 32, 16 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="ButtonLabel" type="Label" parent="CharactersUI/NinePatchRect/PlayerOpenTalentButton"]
margin_left = 11.5001
margin_top = 14.0
margin_right = 355.5
margin_bottom = 142.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 3 )
text = "Talents"

[node name="CharacterTalentsControl" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -360.0
margin_right = 540.0
margin_bottom = 360.0
script = ExtResource( 1 )

[node name="Blur" type="ColorRect" parent="CharacterTalentsControl"]
material = ExtResource( 7 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1300.0
margin_top = -855.0
margin_right = 1940.0
margin_bottom = 1305.0
color = Color( 1, 1, 1, 0 )

[node name="NinePatchRect" type="NinePatchRect" parent="CharacterTalentsControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -436.5
margin_top = -307.0
margin_right = 436.5
margin_bottom = 307.0
texture = ExtResource( 6 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="Header" type="RichTextLabel" parent="CharacterTalentsControl/NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -306.0
margin_top = 13.0
margin_right = 306.0
margin_bottom = 61.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 1, 0.843137, 0.0117647, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]=== [color=#ffd703]Character Talent Tree[/color] ==="
text = "=== Character Talent Tree ==="
scroll_active = false

[node name="TalentTreeControl" type="Control" parent="CharacterTalentsControl/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.5
margin_top = 12.0
margin_right = 15.5
margin_bottom = 12.0

[node name="BackgroundBox" type="NinePatchRect" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl"]
margin_left = 124.0
margin_top = 60.0
margin_right = 839.0
margin_bottom = 469.0
texture = ExtResource( 6 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="PlayerControl" type="Control" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite" type="Sprite" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl"]
position = Vector2( 68, 125 )
scale = Vector2( 7, 7 )
texture = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl"]
anchor_right = 21.766
anchor_bottom = 15.255
margin_left = 148.0
margin_top = 83.0
margin_right = -32.64
margin_bottom = 637.8
rect_min_size = Vector2( 566, 355 )

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer"]
margin_right = 510.0
margin_bottom = 1120.0
rect_min_size = Vector2( 510, 1100 )

[node name="RichTextLabel" type="RichTextLabel" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer"]
margin_right = 510.0
margin_bottom = 1100.0
rect_min_size = Vector2( 510, 1100 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=#ffd703]Cyclone Slashes[/color]
Doing a charged attack after Basic Attack SEQ 2 unleashes a flurry of windblades to deal multiple instances of Physical DMG.
([color=#ffd703]ATK[/color], [color=#ffd703]ATK[/color], Hold [color=#ffd703]ATK[/color])


[color=#ffd703]Swift Thrust[/color]
Airborne charged attacks can now be chained up to 2 times.


[color=#ffd703]Breath of Flame[/color]
Activating FireSaw releases a burst of flames that burn enemies.


[color=#ffd703]Infernal Mark[/color]
Enemies marked with the Sulphuric Sigil take more damage. 


[color=#ffd703]Create Sugar Roll[/color]
Conjure a [color=#bda662]Sugar Roll[/color] at your location. A character can eat the roll, restoring health over time. The roll cannot be eaten if there are enemies nearby, and only one roll may exist in a level. "
text = "Cyclone Slashes
Doing a charged attack after Basic Attack SEQ 2 unleashes a flurry of windblades to deal multiple instances of Physical DMG.
(ATK, ATK, Hold ATK)


Swift Thrust
Airborne charged attacks can now be chained up to 2 times.


Breath of Flame
Activating FireSaw releases a burst of flames that burn enemies.


Infernal Mark
Enemies marked with the Sulphuric Sigil take more damage. 


Create Sugar Roll
Conjure a Sugar Roll at your location. A character can eat the roll, restoring health over time. The roll cannot be eaten if there are enemies nearby, and only one roll may exist in a level. "
scroll_active = false

[node name="TalentControl1" type="Control" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer"]
margin_top = 1104.0
margin_right = 510.0
margin_bottom = 1104.0

[node name="PlayerTalentButton" type="TextureButton" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl1"]
anchor_left = 0.215
anchor_right = 0.215
margin_left = 426.35
margin_top = -1104.0
margin_right = 458.35
margin_bottom = -1087.0
rect_min_size = Vector2( 32, 16 )
rect_scale = Vector2( 7.5, 7.5 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )

[node name="ButtonLabel" type="Label" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl1/PlayerTalentButton"]
margin_left = 2.0
margin_top = 2.0
margin_right = 47.0
margin_bottom = 19.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 3 )
text = "Unlock"

[node name="PlayerCheckButton" type="CheckButton" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl1/PlayerTalentButton"]
margin_left = -5.33334
margin_top = 8.66666
margin_right = 116.667
margin_bottom = 48.6667
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 4 )
text = "Enable"
align = 1

[node name="TalentControl2" type="Control" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer"]
margin_top = 1108.0
margin_right = 510.0
margin_bottom = 1108.0

[node name="PlayerTalentButton" type="TextureButton" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl2"]
anchor_left = 0.215
anchor_right = 0.215
margin_left = 426.8
margin_top = -853.0
margin_right = 442.8
margin_bottom = -844.0
rect_scale = Vector2( 7.5, 7.5 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )

[node name="ButtonLabel" type="Label" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl2/PlayerTalentButton"]
margin_left = 1.60001
margin_top = 1.6
margin_right = 40.6
margin_bottom = 18.6
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 3 )
text = "Unlock"

[node name="PlayerCheckButton" type="CheckButton" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl2/PlayerTalentButton"]
margin_left = -5.33334
margin_top = 8.66666
margin_right = 116.667
margin_bottom = 48.6667
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 4 )
text = "Enable"
align = 1

[node name="TalentControl3" type="Control" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer"]
margin_top = 1112.0
margin_right = 510.0
margin_bottom = 1112.0

[node name="PlayerTalentButton" type="TextureButton" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl3"]
anchor_left = 0.215
anchor_right = 0.215
margin_left = 426.35
margin_top = -685.0
margin_right = 458.35
margin_bottom = -669.0
rect_min_size = Vector2( 32, 16 )
rect_scale = Vector2( 7.5, 7.5 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )

[node name="ButtonLabel" type="Label" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl3/PlayerTalentButton"]
margin_left = 1.60001
margin_top = 1.6
margin_right = 40.6
margin_bottom = 18.6
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 3 )
text = "Unlock"

[node name="PlayerCheckButton" type="CheckButton" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl3/PlayerTalentButton"]
margin_left = -5.33334
margin_top = 8.66666
margin_right = 116.667
margin_bottom = 48.6667
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 4 )
text = "Enable"
align = 1

[node name="TalentControl4" type="Control" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer"]
margin_top = 1116.0
margin_right = 510.0
margin_bottom = 1116.0

[node name="PlayerTalentButton" type="TextureButton" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl4"]
anchor_left = 0.215
anchor_right = 0.215
margin_left = 426.8
margin_top = -522.0
margin_right = 458.8
margin_bottom = -506.0
rect_min_size = Vector2( 32, 16 )
rect_scale = Vector2( 7.5, 7.5 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )

[node name="ButtonLabel" type="Label" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl4/PlayerTalentButton"]
margin_left = 1.60001
margin_top = 1.6
margin_right = 40.6
margin_bottom = 18.6
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 3 )
text = "Unlock"

[node name="PlayerCheckButton" type="CheckButton" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl4/PlayerTalentButton"]
margin_left = -5.33334
margin_top = 8.66666
margin_right = 116.667
margin_bottom = 48.6667
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 4 )
text = "Enable"
align = 1

[node name="TalentControl5" type="Control" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer"]
margin_top = 1120.0
margin_right = 510.0
margin_bottom = 1120.0

[node name="PlayerTalentButton" type="TextureButton" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl5"]
anchor_left = 0.215
anchor_right = 0.215
margin_left = 426.35
margin_top = -366.0
margin_right = 458.35
margin_bottom = -350.0
rect_min_size = Vector2( 32, 16 )
rect_scale = Vector2( 7.5, 7.5 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )

[node name="ButtonLabel" type="Label" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl5/PlayerTalentButton"]
margin_left = 1.60001
margin_top = 1.6
margin_right = 40.6
margin_bottom = 18.6
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 3 )
text = "Unlock"

[node name="PlayerCheckButton" type="CheckButton" parent="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl5/PlayerTalentButton"]
margin_left = -5.33334
margin_top = 8.66666
margin_right = 116.667
margin_bottom = 48.6667
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 4 )
text = "Enable"
align = 1

[node name="CloseButtonMainUI" type="TextureButton" parent="CharacterTalentsControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -436.0
margin_top = -307.0
margin_right = -396.0
margin_bottom = -267.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 9 )
expand = true

[connection signal="pressed" from="CharactersUI/NinePatchRect/CloseButtonMainUI" to="CharactersUI" method="_on_CloseButtonMainUI_pressed"]
[connection signal="pressed" from="CharactersUI/NinePatchRect/PlayerOpenTalentButton" to="CharactersUI" method="_on_PlayerOpenTalentButton_pressed"]
[connection signal="pressed" from="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl1/PlayerTalentButton" to="CharacterTalentsControl" method="_on_PlayerTalentButton1_pressed"]
[connection signal="toggled" from="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl1/PlayerTalentButton/PlayerCheckButton" to="CharacterTalentsControl" method="_on_PlayerCheckButton1_toggled"]
[connection signal="pressed" from="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl2/PlayerTalentButton" to="CharacterTalentsControl" method="_on_PlayerTalentButton2_pressed"]
[connection signal="toggled" from="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl2/PlayerTalentButton/PlayerCheckButton" to="CharacterTalentsControl" method="_on_PlayerCheckButton2_toggled"]
[connection signal="pressed" from="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl3/PlayerTalentButton" to="CharacterTalentsControl" method="_on_PlayerTalentButton3_pressed"]
[connection signal="toggled" from="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl3/PlayerTalentButton/PlayerCheckButton" to="CharacterTalentsControl" method="_on_PlayerCheckButton3_toggled"]
[connection signal="pressed" from="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl4/PlayerTalentButton" to="CharacterTalentsControl" method="_on_PlayerTalentButton4_pressed"]
[connection signal="toggled" from="CharacterTalentsControl/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer/TalentControl4/PlayerTalentButton/PlayerCheckButton" to="CharacterTalentsControl" method="_on_PlayerCheckButton4_toggled"]
[connection signal="pressed" from="CharacterTalentsControl/CloseButtonMainUI" to="CharacterTalentsControl" method="_on_CloseButtonMainUI_pressed"]
